支持TS的写法

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -17,3 +17,27 @@
     ]
   }
 }
+
+/**
+ * 这个配置文件的主要作用是：
+ * 
+ * 1. JavaScript 开发体验优化：
+ *    - 为 JavaScript 文件提供 TypeScript 类似的开发体验
+ *    - 启用代码智能提示和自动完成
+ *    - 提供更好的导航和重构支持
+ * 
+ * 2. 路径解析配置：
+ *    - 配置模块导入的基础路径
+ *    - 设置路径别名（如 @ 指向 src）
+ *    - 定义模块解析策略
+ * 
+ * 3. 编辑器支持：
+ *    - 帮助 VS Code 等编辑器理解项目结构
+ *    - 提供更好的代码补全
+ *    - 启用更准确的类型推断
+ * 
+ * 4. 项目范围设置：
+ *    - 定义项目的 JavaScript 语言特性
+ *    - 配置可用的 API 和库
+ *    - 设置编译目标环境
+ */
