--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "env": {
       "node": true
     },
+    "plugins": ["@typescript-eslint"],
     "extends": [
       "plugin:vue/vue3-essential",
       "eslint:recommended",
@@ -51,7 +52,14 @@
     "parserOptions": {
       "parser": "@typescript-eslint/parser"
     },
-    "rules": {}
+    "rules": {
+      "generator-star-spacing": "off",
+      "no-tabs":"off",
+      "no-unused-vars":"off",
+      "no-console":"off",
+      "no-irregular-whitespace":"off",
+      "no-debugger": "off"
+    }
   },
   "browserslist": [
     "> 1%",
