--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.8.3",
     "import": "^0.0.6",
     "my-vue-project": "file:",
+    "mysql": "^2.18.1",
     "plugin": "^0.3.3",
     "vue": "^3.2.13"
   },
